Add the ability to make changes and modifications shopItem

--- a/app/src/main/res/layout/activity_shop_item.xml
+++ b/app/src/main/res/layout/activity_shop_item.xml
@@ -35,8 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toTop="@id/button"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/til_name">
@@ -52,6 +51,7 @@
 
     <Button
         android:id="@+id/button"
+        android:text="@string/save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
